# aws-devops-monitoring-dashboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md  solution-manifest.yaml
source/lambda/quicksight-custom-resources/: .coveragerc  .gitignore  lambda_function.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
source/lambda/quicksight-custom-resources/test/: conftest.py  dump_environment.py  logger_test_helper.py  test_analysis.py  test_dashboard.py  test_dataset.py  test_datasource.py  test_environment.py  test_helpers.py  test_lambda_function.py  test_logging.py  test_quicksight.py  test_source_entity.py  test_template.py
source/lambda/quicksight-custom-resources/test/fixtures/: quicksight_analysis_fixtures.py  quicksight_dashboard_fixtures.py  quicksight_dataset_fixtures.py  quicksight_datasource_fixtures.py  quicksight_template_fixtures.py  quicksight_test_fixture.py
source/lambda/quicksight-custom-resources/util/: analysis.py  dashboard.py  dataset.py  datasource.py  helpers.py  logging.py  quicksight.py  quicksight_application.py  quicksight_resource.py  source_entity.py  template.py
source/lambda/quicksight-custom-resources/util/config/: analysis-main.config.json  dashboard-main.config.json  dataset-code-build-detail.config.json  (+6 more)
source/lambda/solution_helper/: .coveragerc  lambda_function.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_lambda_function.py
source/lambda/solution_helper/test/: test_lambda_function.py  test_solution_metrics.py
source/lambda/solution_helper/util/: solution_metrics.py
(+144 files in other folders)
